--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -1,8 +1,7 @@
-body {
-  background-image: url("top_page.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-attachment: fixed;
-  background-color: #464646;
+
+.top-wrapper {
+  background-image: image-url("top_page.jpg");
+  height: 100vh;
+  position: relative;
+  background-position: center;
 }
