--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -1,6 +1,6 @@
-
 .top-wrapper {
   background-image: image-url("top_page.jpg");
+  background-size: cover;
   height: 100vh;
   position: relative;
   background-position: center;
