--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -10,7 +10,7 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto main-nav align-items-center">
-        <li class="nav-item dropdown dropdown-slide">
+        <li class="nav-item dropdown dropdown-slide ml-auto">
           <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             掲示板
           </a>
@@ -21,11 +21,11 @@
           </div>
         </li>
 
-        <li class="nav-item">
+        <li class="nav-item ml-auto">
           <%= link_to 'ブックマーク一覧', '#', class: 'nav-link' %>
         </li>
 
-        <li class="nav-item dropdown dropdown-slide">
+        <li class="nav-item dropdown dropdown-slide ml-auto">
           <a href="#" class="nav-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="header-profile">
             <%= image_tag 'sample', size: '40x40', class: 'rounded-circle mr15'%>
           </a>
