--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-lg navigation navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navigation navbar-dark bg-dark">
 
     <%= link_to root_path, class: 'navbar-brand' do %>
       <%= image_tag 'logo.png' %>
@@ -12,22 +12,32 @@
       <ul class="navbar-nav ml-auto main-nav align-items-center">
         <li class="nav-item dropdown dropdown-slide ml-auto">
           <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            掲示板
+            大喜利
           </a>
 
           <div class="dropdown-menu dropdown-menu-right">
-            <%= link_to '掲示板一覧', '#', class: 'dropdown-item' %>
-            <%= link_to '掲示板作成', '#', class: 'dropdown-item' %>
+            <%= link_to '#', class: 'dropdown-item' do %>
+              <%= image_tag 'board.jpeg', size: '40x37', class: 'rounded-circle mr15'%>
+              大喜利一覧
+            <% end %>
+            <%= link_to '#', class: 'dropdown-item' do %>
+              <%= image_tag 'title.png', size: '40x37', class: 'rounded-circle mr15'%>
+              お題作成
+            <% end %>
           </div>
         </li>
 
         <li class="nav-item ml-auto">
-          <%= link_to 'ブックマーク一覧', '#', class: 'nav-link' %>
+          <%= link_to '#', class: 'nav-link' do %>
+            <%= image_tag 'bookmark.png', size: '40x37', class: 'rounded-circle mr15'%>
+            お気に大喜利
+          <% end %>
         </li>
 
         <li class="nav-item dropdown dropdown-slide ml-auto">
           <a href="#" class="nav-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="header-profile">
-            <%= image_tag 'sample', size: '40x40', class: 'rounded-circle mr15'%>
+            <%= image_tag 'home.png', size: '40x37', class: 'rounded-circle mr15'%>
+            My大喜利
           </a>
           <div class="dropdown-menu dropdown-menu-right">
             <div class="dropdown-item">らんてっく たろう</div>
