--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,3 +37,15 @@ body {
 .btn-primary {
     background-color:#44883f
 }
+
+.alert {
+    margin-bottom: 0rem;
+}
+
+header {
+    background-color: rgba(255, 255, 255, 0.342);
+}
+
+.dropdown-item {
+    color: white;
+}
