--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -15,7 +15,7 @@
             大喜利
           </a>
 
-          <div class="dropdown-menu dropdown-menu-right">
+          <div class="dropdown-menu dropdown-menu-dark bg-dark">
             <%= link_to '#', class: 'dropdown-item' do %>
               <%= image_tag 'board.jpeg', size: '40x37', class: 'rounded-circle mr15'%>
               大喜利一覧
