--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -16,7 +16,7 @@
           </a>
 
           <div class="dropdown-menu dropdown-menu-dark bg-dark">
-            <%= link_to '#', class: 'dropdown-item' do %>
+            <%= link_to boards_path, class: 'dropdown-item' do %>
               <%= image_tag 'board.jpeg', size: '40x37', class: 'rounded-circle mr15'%>
               大喜利一覧
             <% end %>
@@ -39,12 +39,12 @@
             <%= image_tag 'home.png', size: '40x37', class: 'rounded-circle mr15'%>
             My大喜利
           </a>
-          <div class="dropdown-menu dropdown-menu-right">
+          <div class="dropdown-menu dropdown-menu-dark bg-dark">
             <div class="dropdown-item">らんてっく たろう</div>
             <div class="dropdown-divider"></div>
             <%= link_to 'プロフィール', '#', class: 'dropdown-item' %>
 
-            <%= link_to (t 'defaults.logout'), logout_path, class: 'dropdown-item', method: :delete %>
+            <%= link_to 'ログアウト', logout_path, class: 'dropdown-item', method: :delete %>
           </div>
         </li>
       </ul>
