--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -20,7 +20,7 @@
               <%= image_tag 'board.jpeg', size: '40x37', class: 'rounded-circle mr15'%>
               大喜利一覧
             <% end %>
-            <%= link_to '#', class: 'dropdown-item' do %>
+            <%= link_to new_board_path, class: 'dropdown-item' do %>
               <%= image_tag 'title.png', size: '40x37', class: 'rounded-circle mr15'%>
               お題作成
             <% end %>
