--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -1,28 +1,23 @@
 <div class="col-sm-12 col-lg-4 mb-3">
   <div id="board-id-<%= board.id %>">
     <div class="card">
-      <%= image_tag 'board_placeholder.png', class: 'card-img-top', size: '300x200' %>
       <div class="card-body">
         <h4 class="card-title">
           <a href="#">
             <%= board.title %>
           </a>
         </h4>
-        <div class='mr10 float-right'>
-          <a href="#"><%= icon 'fas', 'trash', class: 'pr-1' %></a>
-          <a href="#"><%= icon 'fa', 'pen' %></a>
-        </div>
+        <ul class='mr10 float-right list'>
+          <li><a href="#">回答する</a></li>
+          <li><a href="#">他の人の回答</a></li>
+        </ul>
         <ul class="list-inline">
           <li class="list-inline-item">
-            <%= icon 'far', 'user' %>
-            <%= board.user.nick_name %>
-          </li>
+            <p>出題者:<%= board.user.nick_name %>さん</p>
           <li class="list-inline-item">
-            <%= icon 'far', 'calendar' %>
-            <%= l board.created_at, format: :long %>
+            <p>回答者: 5人</p>
           </li>
         </ul>
-        <p class="card-text"><%= board.body %></p>
       </div>
     </div>
   </div>
