--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -1,7 +1,7 @@
 <div class="bg-koruku">
   <div class="container pt-3">
     <div class="top-change">
-    <p class="title-size">大喜利一覧</p>
+      <p class="title-size">大喜利一覧</p>
       <div class="row">
         <div class="col-lg-10 offset-lg-1">
           <!-- 検索フォーム -->
@@ -16,122 +16,12 @@
       <div class="row">
         <div class="col-12">
           <div class="row">
-            <div class="col-sm-12 col-lg-4 mb-3">
-              <div id="board-id-1">
-                <div class="card">
-                  <div class="card-body">
-                    <h4 class="card-title">
-                      <a href="#">映画ドラえもん⋯</a>
-                    </h4>
-                    <div class="card-position">
-                      <div class='mr10 float-right'>
-                        <%= link_to '#', class: 'answer',id: 'button-edit-#{board.id}' do %>
-                          回答する
-                        <% end %>
-                      </div>
-                      <ul class="list-inline">
-                        <li class="list-inline-item">出題者:漆黒のモモン</li>
-                        <li class="list-inline-item">回答者5人</li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </div>
+            <% if @boards.present? %>
+              <%= render @boards %>
+            <% else %>
+              <p><%= t('.no_result') %></p>
+            <% end %>
             </div>
-            <div class="col-sm-12 col-lg-4 mb-3">
-              <div id="board-id-2">
-                <div class="card">
-                  <div class="card-body">
-                    <h4 class="card-title">
-                      <a href="#">映画ドラえもん⋯</a>
-                    </h4>
-                    <div class="card-position">
-                      <div class='mr10 float-right'>
-                        <%= link_to '#', class: 'answer',id: 'button-edit-#{board.id}' do %>
-                          回答する
-                        <% end %>
-                      </div>
-                      <ul class="list-inline">
-                        <li class="list-inline-item">出題者:漆黒のモモン</li>
-                        <li class="list-inline-item">回答者5人</li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-12 col-lg-4 mb-3">
-              <div id="board-id-3">
-                <div class="card">
-                  <div class="card-body">
-                    <h4 class="card-title">
-                      <a href="#">映画ドラえもん⋯</a>
-                    </h4>
-                    <div class='mr10 float-right'>
-                      <%= link_to '#', id: 'button-edit-#{board.id}' do %>
-                        <%= icon 'fa', 'pen' %>
-                      <% end %>
-                      <%= link_to '#', id: 'button-delete-#{board.id}', method: :delete, data: {confirm: ''} do %>
-                        <%= icon 'fas', 'trash' %>
-                      <% end %>
-                    </div>
-                    <ul class="list-inline">
-                      <li class="list-inline-item"><i class="far fa-user"></i> 橋本 愛子</li>
-                      <li class="list-inline-item"><i class="far fa-calendar"></i> 2019/12/26 17:00</li>
-                    </ul>
-                    <p class="card-text">本文2</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-12 col-lg-4 mb-3">
-              <div id="board-id-4">
-                <div class="card">
-                  <div class="card-body">
-                    <h4 class="card-title">
-                      <a href="#">映画ドラえもん⋯</a>
-                    </h4>
-                    <div class='mr10 float-right'>
-                      <%= link_to '#', id: 'button-edit-#{board.id}' do %>
-                        <%= icon 'fa', 'pen' %>
-                      <% end %>
-                      <%= link_to '#', id: 'button-delete-#{board.id}', method: :delete, data: {confirm: ''} do %>
-                        <%= icon 'fas', 'trash' %>
-                      <% end %>
-                    </div>
-                    <ul class="list-inline">
-                      <li class="list-inline-item"><i class="far fa-user"></i> 上野 響</li>
-                      <li class="list-inline-item"><i class="far fa-calendar"></i> 2019/12/26 17:00</li>
-                    </ul>
-                    <p class="card-text">本文3</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-12 col-lg-4 mb-3">
-              <div id="board-id-5">
-                <div class="card">
-                  <div class="card-body">
-                    <h4 class="card-title">
-                      <a href="#">映画ドラえもん⋯</a>
-                    </h4>
-                    <div class='mr10 float-right'>
-                      <%= link_to '#', id: 'button-edit-#{board.id}' do %>
-                        <%= icon 'fa', 'pen' %>
-                      <% end %>
-                      <%= link_to '#', id: 'button-delete-#{board.id}', method: :delete, data: {confirm: ''} do %>
-                        <%= icon 'fas', 'trash' %>
-                      <% end %>
-                    </div>
-                    <ul class="list-inline">
-                      <li class="list-inline-item"><i class="far fa-user"></i> 橋本 愛子</li>
-                      <li class="list-inline-item"><i class="far fa-calendar"></i> 2019/12/26 17:00</li>
-                    </ul>
-                    <p class="card-text">本文4</p>
-                  </div>
-                </div>
-              </div>
-          </div>
           </div>
         </div>
       </div>
