--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -109,3 +109,12 @@ header {
 .list-inline {
     margin-bottom: 0;
 }
+
+.form-group1 {
+    margin-top: 15px;
+}
+
+.form-group2 {
+    margin-top: 80px;
+    margin-bottom: 20px;
+}
