--- a/app/views/boards/_form.html.erb
+++ b/app/views/boards/_form.html.erb
@@ -1,9 +1,11 @@
 <%= form_with model: board, local: true do |f| %>
-  <div class="form-group">
-    <%= f.text_area :body, class: 'form-control', rows: 10, value: "Q." %>
+  <%= render 'shared/error_messages', object: f.object %>
+  <div class="form-group1">
+    <%= f.text_area :title, class: 'form-control', rows: 10, placeholder: "例:超A級スナイパー ゴルゴ13の唯一の弱点は？" %>
   </div>
-  <div class="form-group">
-    <%= f.text_area :body, class: 'form-control', rows: 2, value: "A." %>
+  <div class="form-group2">
+    <%= f.label :body, "解答例" %>
+    <%= f.text_area :body, class: 'form-control', rows: 2, placeholder: "例:おばけが怖い" %>
   </div>
 
   <%= f.submit "回答", class: 'btn btn-primary' %>
