--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,6 +4,7 @@
       <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
         <h1>アカウント新規登録</h1>
         <%= form_with model: @user, local: true do |f| %>
+          <%= render 'shared/error_messages', object: f.object %>
           <div class="form-group">
             <%= f.label :nick_name %>
             <%= f.text_field :nick_name, class: 'form-control' %>
