--- a/app/views/boards/_crud_menus.html.erb
+++ b/app/views/boards/_crud_menus.html.erb
@@ -1,3 +1,6 @@
+<% content_for :css do %>
+  <%= stylesheet_link_tag 'boards/crud' %>
+<% end %>
 <ul class='crud-menu-btn list-inline float-right'>
   <li class="list-inline-item">
     <%= link_to '#', id: "button-edit-#{board.id}" do %>
