--- a/app/views/boards/_form.html.erb
+++ b/app/views/boards/_form.html.erb
@@ -1,3 +1,7 @@
+<% content_for :css do %>
+  <%= stylesheet_link_tag 'boards/form' %>
+<% end %>
+
 <%= form_with model: board, local: true do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
   <div class="form-group1">
