--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -1,3 +1,6 @@
+<% content_for :css do %>
+  <%= stylesheet_link_tag 'boards/index' %>
+<% end %>
 <% content_for(:title, t('.title')) %>
 <div class="bg-koruku">
   <div class="container pt-3">
