--- a/app/views/boards/new.html.erb
+++ b/app/views/boards/new.html.erb
@@ -1,3 +1,6 @@
+<% content_for :css do %>
+  <%= stylesheet_link_tag 'boards/new' %>
+<% end %>
 <% content_for(:title, t('.title')) %>
 <div class="container">
   <div class="row">
