--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,3 +1,6 @@
+<% content_for :css do %>
+  <%= stylesheet_link_tag 'boards/show' %>
+<% end %>
 <% content_for(:title, t('.title')) %>
 <div class="container pt-5">
   <div class="row mb-3">
