--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -1,3 +1,6 @@
+<% content_for :css do %>
+  <%= stylesheet_link_tag 'comments/comments' %>
+<% end %>
 <div class="row">
   <div class="col-lg-8 offset-lg-2">
     <table id="js-table-comment" class="table">
