--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,3 +1,6 @@
+<% content_for :css do %>
+  <%= stylesheet_link_tag 'comments/form' %>
+<% end %>
 <div class="row mb-3">
   <div class="col-lg-8 offset-lg-2">
     <%= form_with model: comment, url: [board,comment], local: true do |f| %>
