--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,3 +1,6 @@
+<% content_for :css do %>
+  <%= stylesheet_link_tag 'shared/error' %>
+<% end %>
 <% if object.errors.any? %>
     <div id="error_messages" class="alert alert-danger">
       <ul class="mb-0">
