--- a/app/views/shared/_flash_message.html.erb
+++ b/app/views/shared/_flash_message.html.erb
@@ -1,3 +1,6 @@
+<% content_for :css do %>
+  <%= stylesheet_link_tag 'shared/flash' %>
+<% end %>
 <% flash.each do |message_type, message| %>
   <div class="alert alert-<%= message_type %>">
     <%= message %><button type="button" class="close" data-dismiss="alert">&times;</button>
