--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,3 +1,6 @@
+<% content_for :css do %>
+  <%= stylesheet_link_tag 'shared/header' %>
+<% end %>
 <header>
   <nav class="navbar navbar-expand-lg navigation navbar-dark bg-dark">
 
